--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+@layer components {
+  .label-form {
+    @apply mb-2 text-sm font-medium text-gray-900 sr-only dark:text-gray-300;
+  }
+  .div-input-form {
+    @apply flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none;
+  }
+  .input-form {
+    @apply flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none;
+  }
+}
